centers board and fixes chat overflow

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -3,4 +3,6 @@
     height: 100%;
     border: 0.1rem solid #fff;
     border-right: none;
+    min-width: 200px;
+    min-height: 100px;
 }
