--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -13,6 +13,8 @@
     padding: 1vw;
     margin: 0;
     list-style: none;
+    overflow: auto;
+    border-bottom: 0.1rem solid #fff;
 }
 
 #chat li {
