--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-width: 320px;
+  min-width: 200px;
   min-height: 100vh;
 
 }
